correction overflow

--- a/circle.css
+++ b/circle.css
@@ -15,7 +15,6 @@
 .svg{
     width: 250px;
     margin-top: -150px;
-    margin-left: 120px;
 }
 /* #circle{
     margin-left: auto;
